Fix text color in TokyoNight Storm dark mode

--- a/colors/tokyonight_storm.css
+++ b/colors/tokyonight_storm.css
@@ -8,7 +8,7 @@
   --background-mentioned-hover: #9d7cd815 !important;
   --background-modifier-hover: #2a2730 !important;
   --background-modifier-active: #3d3745 !important;
-  --text-normal: var(--accent-color) !important;
+  --text-normal: #c0caf5 !important;
   --text-muted: #7d718c !important;
   --text-link: #f3edfb !important;
   --settings-icon-color: #a293b4 !important;
